--- a/package.yaml
+++ b/package.yaml
@@ -7,7 +7,9 @@ activities:
         - python
         - -m
         - robot
-        - -d
+        - --report
+        - NONE
+        - --outputdir
         - output
         - --logtitle
         - Task log
